inverse time: level proximity, plotly plot

--- a/replay.ipynb
+++ b/replay.ipynb
@@ -63,10 +63,9 @@
     "    ) as feed:\n",
     "        async for onesec in feed.one_second_iterator():\n",
     "            yield onesec\n",
+    "            max_samples -= 1\n",
     "            if max_samples == 0:\n",
     "                break\n",
-    "            else:\n",
-    "                max_samples -= 1\n",
     "\n",
     "async for onesec in iter_sec(max_samples=3):\n",
     "    print(onesec)"
@@ -119,7 +118,108 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "async def iter_shapes_t2l(date_regexp='2024-08-06', max_samples=0):\n",
+    "async def iter_shapes_t2l(date_regexp='2024', max_samples=0):\n",
+    "    symbol_shaper = ArrayShaper(zoom_frac=0.002)\n",
+    "    async for onesec in iter_sec(max_samples=max_samples):\n",
+    "        yield [\n",
+    "            await symbol_shaper.make_arr3d(onesec.symbols['ETH-USD']),\n",
+    "            await symbol_shaper.build_time_level_trade(),\n",
+    "            symbol_shaper.prices_array\n",
+    "        ]\n",
+    "\n",
+    "async for shapes in iter_shapes_t2l(max_samples=1):\n",
+    "    print(shapes[0].shape, shapes[1].shape, shapes[2].shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import nest_asyncio\n",
+    "# nest_asyncio.apply()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import plotly.graph_objects as go\n",
+    "from plotly.subplots import make_subplots\n",
+    "import asyncio\n",
+    "from IPython.display import display\n",
+    "\n",
+    "# Define your asynchronous function to update the figure\n",
+    "async def update_figure():\n",
+    "    # Initialize the figure with two subplots and adjust row heights\n",
+    "    fig = make_subplots(\n",
+    "        rows=2, cols=1,\n",
+    "        subplot_titles=(\"books\", \"level proximity\"),\n",
+    "        vertical_spacing=0.02,\n",
+    "        row_heights=[0.5, 0.5]  # Adjust the relative heights of the rows\n",
+    "    )\n",
+    "\n",
+    "    # Increase the overall figure height\n",
+    "    fig.update_layout(\n",
+    "        height=800,  # Set the overall height of the figure in pixels\n",
+    "        margin=dict(t=50, b=50, l=50, r=50)  # Adjust margins if needed\n",
+    "    )\n",
+    "\n",
+    "    # Create the figure widget\n",
+    "    fig_widget = go.FigureWidget(fig)\n",
+    "    display(fig_widget)\n",
+    "\n",
+    "    # Initialize empty traces\n",
+    "    im_trace = go.Heatmap(\n",
+    "        z=np.zeros((10, 10)),\n",
+    "        colorscale='RdBu',\n",
+    "        zmin=-1, zmax=1,\n",
+    "        showscale=False\n",
+    "    )\n",
+    "    t2l_trace = go.Heatmap(\n",
+    "        z=np.zeros((10, 10)),\n",
+    "        colorscale='Turbo',\n",
+    "        zmin=0, zmax=1,\n",
+    "        showscale=False\n",
+    "    )\n",
+    "\n",
+    "    # Add traces to the figure widget\n",
+    "    fig_widget.add_trace(im_trace, row=1, col=1)\n",
+    "    fig_widget.add_trace(t2l_trace, row=2, col=1)\n",
+    "\n",
+    "    # Asynchronous loop to update the figure\n",
+    "    async for shaped, t2l, pxar in iter_shapes_t2l(max_samples=1000):\n",
+    "        # Process your data\n",
+    "        im_data = shaped.copy().transpose(1, 0, 2)\n",
+    "        im_data[:, :, 0] *= -0.5\n",
+    "        im_data[:, :, 1:3] *= 1e6\n",
+    "        im_data = np.clip(im_data, -1, 1)\n",
+    "        t2l_data = np.clip(t2l[:, :, 0].T, -1, 1)\n",
+    "\n",
+    "        # Update the figure widget traces\n",
+    "        with fig_widget.batch_update():\n",
+    "            fig_widget.data[0].z = im_data.mean(axis=2)\n",
+    "            fig_widget.data[1].z = t2l_data\n",
+    "\n",
+    "        # Optional: add a small delay to control update rate\n",
+    "        await asyncio.sleep(0.05)\n",
+    "\n",
+    "# Run the asynchronous function\n",
+    "await update_figure()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "async def iter_shapes_t2l(date_regexp='2024', max_samples=0):\n",
     "    symbol_shaper = ArrayShaper(zoom_frac=0.002)\n",
     "    async for onesec in iter_sec(max_samples=max_samples):\n",
     "        yield [\n",
@@ -130,18 +230,20 @@
     "\n",
     "\n",
     "async for shaped, t2l, pxar in iter_shapes_t2l(max_samples=1000):\n",
-    "    # clear_output(wait=True)\n",
-    "    toshow = np.clip(t2l[:,:,0].copy().T, -1000, 1000)\n",
-    "    \n",
+    "    clear_output(wait=True)\n",
+    "    t2l = np.clip(t2l[:,:,0].copy().T, -1, 1)\n",
     "    im = shaped.copy().transpose(1, 0, 2)\n",
-    "    im[:,:,0] *= -0.2\n",
+    "    im[:,:,0] *= -0.5\n",
     "    im[:,:,1:3] *= 1e6\n",
-    "    # bk = isns.imshow(im, origin='lower', cmap='coolwarm', vmin=-1, vmax=1, gray=True, cbar=False)\n",
-    "    # tl = isns.imshow(toshow, origin=\"lower\", cmap='nipy_spectral', vmin=0, vmax=150, cbar=False)\n",
-    "    fig = px.imshow(toshow, origin=\"lower\", zmin=0, zmax=150, contrast_rescaling='infer')\n",
-    "    # plt.show()\n",
-    "    fig.show()\n",
-    "    f\n",
+    "    im.clip(-1, 1)\n",
+    "    \n",
+    "    isns.set_context(\"notebook\", rc={\"figure.figsize\": (12, 6)})\n",
+    "    tl = isns.imshow(t2l, origin=\"lower\", cmap='nipy_spectral', vmin=0, vmax=1, cbar=False, aspect='auto')\n",
+    "    bk = isns.imshow(im, origin='lower', cmap='coolwarm', vmin=-1, vmax=1, gray=True, cbar=False)\n",
+    "    plt.show()\n",
+    "    # fig = px.imshow(toshow, origin=\"lower\", zmin=0, zmax=150, contrast_rescaling='infer')\n",
+    "    # fig.show()\n",
+    "    # f\n",
     "    # source = pd.DataFrame({\"t\": np.arange(pxar.shape[0]), \"p\": pxar[:,0]})\n",
     "    # chart = alt.Chart(source, width=1024).encode()\n",
     "    # line = chart.mark_line().encode(x=\"t:Q\", y=alt.Y('p:Q', scale=alt.Scale(zero=False)))\n",
@@ -163,7 +265,7 @@
     "line = chart.mark_line().encode(x=\"t:Q\", y=\"p:Q\")\n",
     "line\n",
     "\n",
-    "px.imshow(toshow, origin=\"lower\", zmin=0, zmax=150)"
+    "px.imshow(t2l, origin=\"lower\", zmin=0, zmax=150)"
    ]
   },
   {
@@ -237,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,9 +374,9 @@
     "\n",
     "# Function to update the image\n",
     "async def update_image():\n",
-    "    async for arr in iter_gen_arrays(max_samples=1000):\n",
+    "    async for arr in iter_gen_arrays(max_samples=-1):\n",
     "        im = arr.copy()\n",
-    "        im[:, :, 0] *= -0.2\n",
+    "        im[:, :, 0] *= -0.5\n",
     "        im[:, :, 1:3] *= 1e6\n",
     "        im_display = im.mean(axis=2)\n",
     "\n",
@@ -294,7 +396,7 @@
     "        return hv.Image(data, bounds=(0, 0, width, height))\n",
     "    else:\n",
     "        # Placeholder image if data is None\n",
-    "        return hv.Image(np.zeros((128, 512)), bounds=(0, 0, 512, 128))\n",
+    "        return hv.Image(np.zeros((128, 256)), bounds=(0, 0, 256, 128))\n",
     "\n",
     "\n",
     "# DynamicMap that updates with the stream\n",
@@ -304,7 +406,7 @@
     "dmap.opts(\n",
     "    cmap='RdBu',\n",
     "    frame_width=800,\n",
-    "    aspect=512 / 128,\n",
+    "    aspect=256 / 128,\n",
     "    invert_yaxis=True,\n",
     "    xlabel='second',\n",
     "    ylabel='levels',\n",
