--- a/replay.ipynb
+++ b/replay.ipynb
@@ -137,8 +137,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import nest_asyncio\n",
-    "# nest_asyncio.apply()\n"
+    "import nest_asyncio\n",
+    "nest_asyncio.apply()\n"
    ]
   },
   {
@@ -155,25 +155,26 @@
     "\n",
     "# Define your asynchronous function to update the figure\n",
     "async def update_figure():\n",
-    "    # Initialize the figure with two subplots and adjust row heights\n",
+    "    # Initialize the figure with three subplots and adjust row heights\n",
     "    fig = make_subplots(\n",
-    "        rows=2, cols=1,\n",
-    "        subplot_titles=(\"books\", \"level proximity\"),\n",
-    "        vertical_spacing=0.02,\n",
-    "        row_heights=[0.5, 0.5]  # Adjust the relative heights of the rows\n",
+    "        rows=3, cols=1,\n",
+    "        subplot_titles=(\"Books\", \"Level Proximity\", \"Bid and Ask Price Levels\"),\n",
+    "        vertical_spacing=0.05,\n",
+    "        row_heights=[0.33, 0.33, 0.34]  # Adjust the relative heights of the rows\n",
     "    )\n",
     "\n",
     "    # Increase the overall figure height\n",
     "    fig.update_layout(\n",
-    "        height=800,  # Set the overall height of the figure in pixels\n",
-    "        margin=dict(t=50, b=50, l=50, r=50)  # Adjust margins if needed\n",
+    "        height=600,  # Adjusted for three subplots\n",
+    "        margin=dict(t=50, b=50, l=50, r=50),\n",
+    "        showlegend=True\n",
     "    )\n",
     "\n",
     "    # Create the figure widget\n",
     "    fig_widget = go.FigureWidget(fig)\n",
     "    display(fig_widget)\n",
     "\n",
-    "    # Initialize empty traces\n",
+    "    # Initialize empty traces for heatmaps\n",
     "    im_trace = go.Heatmap(\n",
     "        z=np.zeros((10, 10)),\n",
     "        colorscale='RdBu',\n",
@@ -187,31 +188,69 @@
     "        showscale=False\n",
     "    )\n",
     "\n",
+    "    # Initialize line traces for bid and ask price levels\n",
+    "    bid_trace = go.Scatter(\n",
+    "        x=[], y=[],\n",
+    "        mode='lines',\n",
+    "        line=dict(color='green')\n",
+    "    )\n",
+    "    ask_trace = go.Scatter(\n",
+    "        x=[], y=[],\n",
+    "        mode='lines',\n",
+    "        line=dict(color='red')\n",
+    "    )\n",
+    "\n",
     "    # Add traces to the figure widget\n",
     "    fig_widget.add_trace(im_trace, row=1, col=1)\n",
     "    fig_widget.add_trace(t2l_trace, row=2, col=1)\n",
+    "    fig_widget.add_trace(bid_trace, row=3, col=1)\n",
+    "    fig_widget.add_trace(ask_trace, row=3, col=1)\n",
     "\n",
     "    # Asynchronous loop to update the figure\n",
     "    async for shaped, t2l, pxar in iter_shapes_t2l(max_samples=1000):\n",
-    "        # Process your data\n",
+    "        # Process your data for heatmaps\n",
     "        im_data = shaped.copy().transpose(1, 0, 2)\n",
     "        im_data[:, :, 0] *= -0.5\n",
     "        im_data[:, :, 1:3] *= 1e6\n",
     "        im_data = np.clip(im_data, -1, 1)\n",
     "        t2l_data = np.clip(t2l[:, :, 0].T, -1, 1)\n",
     "\n",
+    "        # Extract bid and ask prices from pxar\n",
+    "        bid_prices = pxar[:, 0]\n",
+    "        ask_prices = pxar[:, 1]\n",
+    "        levels = np.arange(len(bid_prices))  # Assuming levels from 0 to 511\n",
+    "\n",
     "        # Update the figure widget traces\n",
     "        with fig_widget.batch_update():\n",
+    "            # Update heatmaps\n",
     "            fig_widget.data[0].z = im_data.mean(axis=2)\n",
     "            fig_widget.data[1].z = t2l_data\n",
+    "\n",
+    "            # Update bid and ask price traces\n",
+    "            fig_widget.data[2].x = levels\n",
+    "            fig_widget.data[2].y = bid_prices\n",
+    "            fig_widget.data[3].x = levels\n",
+    "            fig_widget.data[3].y = ask_prices\n",
+    "\n",
+    "            # Update axes labels and ranges if necessary\n",
+    "            fig_widget.update_xaxes(title_text=\"Level\", row=3, col=1)\n",
+    "            fig_widget.update_yaxes(title_text=\"Price\", row=3, col=1)\n",
     "\n",
     "        # Optional: add a small delay to control update rate\n",
     "        await asyncio.sleep(0.05)\n",
     "\n",
     "# Run the asynchronous function\n",
     "await update_figure()\n",
+    "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -435,7 +474,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
