--- a/replay.ipynb
+++ b/replay.ipynb
@@ -7,14 +7,14 @@
    "outputs": [],
    "source": [
     "from deep_orderbook.shaper import BookShaper, ArrayShaper\n",
-    "import numpy as np\n",
+    "import asyncio\n",
     "from pylab import rcParams\n",
     "from tqdm.auto import tqdm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,18 +32,6 @@
    "outputs": [],
    "source": [
     "MARKETS = [\"ETH-BTC\", \"BTC-USD\", \"ETH-USD\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# itertools for asyncio !\n",
-    "import asyncio\n",
-    "from aioitertools import iter, next, map, zip\n",
-    "from aioitertools import enumerate"
    ]
   },
   {
@@ -133,16 +121,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import nest_asyncio\n",
-    "nest_asyncio.apply()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -192,12 +170,14 @@
     "    bid_trace = go.Scatter(\n",
     "        x=[], y=[],\n",
     "        mode='lines',\n",
-    "        line=dict(color='green')\n",
+    "        line=dict(color='green'),\n",
+    "        showlegend=False\n",
     "    )\n",
     "    ask_trace = go.Scatter(\n",
     "        x=[], y=[],\n",
     "        mode='lines',\n",
-    "        line=dict(color='red')\n",
+    "        line=dict(color='red'),\n",
+    "        showlegend=False\n",
     "    )\n",
     "\n",
     "    # Add traces to the figure widget\n",
@@ -240,9 +220,7 @@
     "        await asyncio.sleep(0.05)\n",
     "\n",
     "# Run the asynchronous function\n",
-    "await update_figure()\n",
-    "\n",
-    "\n"
+    "await update_figure()"
    ]
   },
   {
@@ -250,43 +228,81 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "async def iter_shapes_t2l(date_regexp='2024', max_samples=0):\n",
-    "    symbol_shaper = ArrayShaper(zoom_frac=0.002)\n",
-    "    async for onesec in iter_sec(max_samples=max_samples):\n",
-    "        yield [\n",
-    "            await symbol_shaper.make_arr3d(onesec.symbols['ETH-USD']),\n",
-    "            await symbol_shaper.build_time_level_trade(),\n",
-    "            symbol_shaper.prices_array\n",
-    "        ]\n",
+    "import numpy as np\n",
+    "import holoviews as hv\n",
+    "from holoviews import opts\n",
+    "import panel as pn\n",
+    "from holoviews.streams import Pipe\n",
+    "from IPython.display import display\n",
+    "import asyncio\n",
+    "import nest_asyncio\n",
     "\n",
+    "# Apply nest_asyncio to allow nested event loops in Jupyter\n",
+    "nest_asyncio.apply()\n",
     "\n",
-    "async for shaped, t2l, pxar in iter_shapes_t2l(max_samples=1000):\n",
-    "    clear_output(wait=True)\n",
-    "    t2l = np.clip(t2l[:,:,0].copy().T, -1, 1)\n",
-    "    im = shaped.copy().transpose(1, 0, 2)\n",
-    "    im[:,:,0] *= -0.5\n",
-    "    im[:,:,1:3] *= 1e6\n",
-    "    im.clip(-1, 1)\n",
-    "    \n",
-    "    isns.set_context(\"notebook\", rc={\"figure.figsize\": (12, 6)})\n",
-    "    tl = isns.imshow(t2l, origin=\"lower\", cmap='nipy_spectral', vmin=0, vmax=1, cbar=False, aspect='auto')\n",
-    "    bk = isns.imshow(im, origin='lower', cmap='coolwarm', vmin=-1, vmax=1, gray=True, cbar=False)\n",
-    "    plt.show()\n",
-    "    # fig = px.imshow(toshow, origin=\"lower\", zmin=0, zmax=150, contrast_rescaling='infer')\n",
-    "    # fig.show()\n",
-    "    # f\n",
-    "    # source = pd.DataFrame({\"t\": np.arange(pxar.shape[0]), \"p\": pxar[:,0]})\n",
-    "    # chart = alt.Chart(source, width=1024).encode()\n",
-    "    # line = chart.mark_line().encode(x=\"t:Q\", y=alt.Y('p:Q', scale=alt.Scale(zero=False)))\n",
-    "    # line.show()\n"
+    "# Enable the Bokeh backend for HoloViews and initialize Panel\n",
+    "hv.extension('bokeh')\n",
+    "pn.extension()\n",
+    "\n",
+    "# Initialize Streams with appropriate empty data\n",
+    "im_pipe = Pipe(data=np.zeros((10, 10)))        # For 'Books' heatmap\n",
+    "t2l_pipe = Pipe(data=np.zeros((10, 10)))       # For 'Level Proximity' heatmap\n",
+    "bidask_pipe = Pipe(data=np.empty((0, 2)))      # For 'Bid and Ask Price Levels'\n",
+    "\n",
+    "# Define HoloViews DynamicMaps for heatmaps\n",
+    "im_dmap = hv.DynamicMap(lambda data: hv.Image(data).opts(\n",
+    "    cmap='RdBu', colorbar=True, width=600, height=200, title='Books',\n",
+    "    xaxis=None, yaxis=None\n",
+    "), streams=[im_pipe])\n",
+    "\n",
+    "t2l_dmap = hv.DynamicMap(lambda data: hv.Image(data).opts(\n",
+    "    cmap='Turbo', colorbar=True, width=600, height=200, title='Level Proximity',\n",
+    "    xaxis=None, yaxis=None\n",
+    "), streams=[t2l_pipe])\n",
+    "\n",
+    "# Define HoloViews DynamicMap for Bid and Ask Prices\n",
+    "def bidask_plot(data):\n",
+    "    bid_curve = hv.Curve((data[:, 0]), 'bid').opts(color='green', line_width=2, show_legend=True)#, framewise=True)\n",
+    "    ask_curve = hv.Curve((data[:, 1]), 'ask').opts(color='red', line_width=2, show_legend=True)#, framewise=True)\n",
+    "    return (bid_curve * ask_curve).opts(width=600, height=200, title='Bid and Ask', \n",
+    "                                        yaxis=None, xaxis='bottom')\n",
+    "\n",
+    "bidask_dmap = hv.DynamicMap(bidask_plot, streams=[bidask_pipe])\n",
+    "\n",
+    "# Layout the plots vertically using Panel\n",
+    "dashboard = pn.Column(\n",
+    "    pn.panel(im_dmap),\n",
+    "    pn.panel(t2l_dmap),\n",
+    "    pn.panel(bidask_dmap)\n",
+    ")\n",
+    "\n",
+    "# Display the dashboard\n",
+    "display(dashboard)\n",
+    "\n",
+    "# Define the async update function\n",
+    "async def run_updates():\n",
+    "    async for shaped, t2l, pxar in iter_shapes_t2l(max_samples=100):\n",
+    "        if np.isnan(pxar).any().any():\n",
+    "            pxar[np.isnan(pxar)] = np.nanmean(pxar)\n",
+    "        # Process the 'Books' heatmap data\n",
+    "        im_data = shaped.copy().transpose(1, 0, 2)\n",
+    "        im_data[:, :, 0] *= -0.5\n",
+    "        im_data[:, :, 1:3] *= 1e6\n",
+    "        im_data = np.clip(im_data, -1, 1)\n",
+    "        im_mean = im_data.mean(axis=2)\n",
+    "\n",
+    "        # Process the 'Level Proximity' heatmap data\n",
+    "        t2l_data = np.clip(t2l[:, :, 0].T, -1, 1)\n",
+    "\n",
+    "        # Send data through the streams\n",
+    "        im_pipe.send(im_mean)\n",
+    "        t2l_pipe.send(t2l_data)\n",
+    "        bidask_pipe.send(pxar)  # Pass pxar directly\n",
+    "\n",
+    "# Start the async update in the background\n",
+    "asyncio.create_task(run_updates())\n",
+    "1\n"
    ]
   },
   {
@@ -378,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,11 +472,18 @@
     "# Display with Panel\n",
     "pn.panel(dmap).show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -474,7 +497,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
