--- a/replay.ipynb
+++ b/replay.ipynb
@@ -6,28 +6,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from deep_orderbook.shaper import BookShaper, ArrayShaper\n",
-    "import asyncio\n",
-    "from pylab import rcParams\n",
+    "from deep_orderbook.shaper import ArrayShaper\n",
     "from tqdm.auto import tqdm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "import seaborn_image as isns\n",
-    "from IPython.display import clear_output\n",
-    "# rcParams['figure.figsize'] = 20, 4"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,6 +70,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import seaborn_image as isns\n",
+    "import matplotlib.pyplot as plt\n",
+    "from IPython.display import clear_output\n",
+    "\n",
     "async def iter_gen_arrays(date_regexp='2024-08-06', max_samples=0):\n",
     "    async for shapes in iter_shapes(max_samples=max_samples):\n",
     "        yield shapes['ETH-USD'].transpose(1, 0, 2)\n",
@@ -144,6 +133,7 @@
     "    # Increase the overall figure height\n",
     "    fig.update_layout(\n",
     "        height=600,  # Adjusted for three subplots\n",
+    "        width=1200,\n",
     "        margin=dict(t=50, b=50, l=50, r=50),\n",
     "        showlegend=True\n",
     "    )\n",
@@ -187,7 +177,7 @@
     "    fig_widget.add_trace(ask_trace, row=3, col=1)\n",
     "\n",
     "    # Asynchronous loop to update the figure\n",
-    "    async for shaped, t2l, pxar in iter_shapes_t2l(max_samples=1000):\n",
+    "    async for shaped, t2l, pxar in iter_shapes_t2l(max_samples=100):\n",
     "        # Process your data for heatmaps\n",
     "        im_data = shaped.copy().transpose(1, 0, 2)\n",
     "        im_data[:, :, 0] *= -0.5\n",
@@ -217,7 +207,7 @@
     "            fig_widget.update_yaxes(title_text=\"Price\", row=3, col=1)\n",
     "\n",
     "        # Optional: add a small delay to control update rate\n",
-    "        await asyncio.sleep(0.05)\n",
+    "        # await asyncio.sleep(0.05)\n",
     "\n",
     "# Run the asynchronous function\n",
     "await update_figure()"
@@ -229,13 +219,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
     "import holoviews as hv\n",
-    "from holoviews import opts\n",
     "import panel as pn\n",
     "from holoviews.streams import Pipe\n",
-    "from IPython.display import display\n",
-    "import asyncio\n",
     "import nest_asyncio\n",
     "\n",
     "# Apply nest_asyncio to allow nested event loops in Jupyter\n",
@@ -251,23 +237,24 @@
     "bidask_pipe = Pipe(data=np.empty((0, 2)))      # For 'Bid and Ask Price Levels'\n",
     "\n",
     "# Define HoloViews DynamicMaps for heatmaps\n",
-    "im_dmap = hv.DynamicMap(lambda data: hv.Image(data).opts(\n",
-    "    cmap='RdBu', colorbar=True, width=600, height=200, title='Books',\n",
-    "    xaxis=None, yaxis=None\n",
+    "im_dmap = hv.DynamicMap(lambda data: hv.Image(data).opts(invert_yaxis=True,\n",
+    "    cmap='RdBu', colorbar=True, width=1200, height=200, title='Books',\n",
+    "    xaxis=None, yaxis=None, ylim=(-0.5, 0.5),\n",
+    "    axiswise=True, framewise=True, shared_axes=False\n",
     "), streams=[im_pipe])\n",
     "\n",
-    "t2l_dmap = hv.DynamicMap(lambda data: hv.Image(data).opts(\n",
-    "    cmap='Turbo', colorbar=True, width=600, height=200, title='Level Proximity',\n",
-    "    xaxis=None, yaxis=None\n",
+    "t2l_dmap = hv.DynamicMap(lambda data: hv.Image(data).opts(invert_yaxis=True,\n",
+    "    cmap='Turbo', colorbar=True, width=1200, height=200, title='Level Proximity',\n",
+    "    xaxis=None, yaxis=None, ylim=(-0.5, 0.5),\n",
+    "    axiswise=True, framewise=True, shared_axes=False\n",
     "), streams=[t2l_pipe])\n",
     "\n",
-    "# Define HoloViews DynamicMap for Bid and Ask Prices\n",
     "def bidask_plot(data):\n",
-    "    bid_curve = hv.Curve((data[:, 0]), 'bid').opts(color='green', line_width=2, show_legend=True)#, framewise=True)\n",
-    "    ask_curve = hv.Curve((data[:, 1]), 'ask').opts(color='red', line_width=2, show_legend=True)#, framewise=True)\n",
-    "    return (bid_curve * ask_curve).opts(width=600, height=200, title='Bid and Ask', \n",
-    "                                        yaxis=None, xaxis='bottom')\n",
-    "\n",
+    "    bid_curve = hv.Curve((data[:, 0]), 'bid').opts(color='green', line_width=2, framewise=True)\n",
+    "    ask_curve = hv.Curve((data[:, 1]), 'ask').opts(color='red', line_width=2, framewise=True)\n",
+    "    return (bid_curve * ask_curve).opts(width=1200, height=200, title='Bid and Ask', \n",
+    "                                        # yaxis=None, xaxis='bottom'\n",
+    "                                       )\n",
     "bidask_dmap = hv.DynamicMap(bidask_plot, streams=[bidask_pipe])\n",
     "\n",
     "# Layout the plots vertically using Panel\n",
@@ -277,14 +264,11 @@
     "    pn.panel(bidask_dmap)\n",
     ")\n",
     "\n",
-    "# Display the dashboard\n",
-    "display(dashboard)\n",
-    "\n",
     "# Define the async update function\n",
     "async def run_updates():\n",
     "    async for shaped, t2l, pxar in iter_shapes_t2l(max_samples=100):\n",
-    "        if np.isnan(pxar).any().any():\n",
-    "            pxar[np.isnan(pxar)] = np.nanmean(pxar)\n",
+    "        # if np.isnan(pxar).any().any():\n",
+    "        #     pxar[np.isnan(pxar)] = np.nanmean(pxar)\n",
     "        # Process the 'Books' heatmap data\n",
     "        im_data = shaped.copy().transpose(1, 0, 2)\n",
     "        im_data[:, :, 0] *= -0.5\n",
@@ -298,56 +282,14 @@
     "        # Send data through the streams\n",
     "        im_pipe.send(im_mean)\n",
     "        t2l_pipe.send(t2l_data)\n",
-    "        bidask_pipe.send(pxar)  # Pass pxar directly\n",
+    "        bidask_pipe.send(pxar)\n",
+    "\n",
+    "display(dashboard)\n",
+    "await asyncio.sleep(0.1)\n",
     "\n",
     "# Start the async update in the background\n",
     "asyncio.create_task(run_updates())\n",
-    "1\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import altair as alt\n",
-    "import pandas as pd\n",
-    "import plotly.express as px\n",
-    "\n",
-    "source = pd.DataFrame({\"t\": np.arange(pxar.shape[0]), \"p\": pxar[:,0]})\n",
-    "chart = alt.Chart(source).encode()\n",
-    "line = chart.mark_line().encode(x=\"t:Q\", y=\"p:Q\")\n",
-    "line\n",
-    "\n",
-    "px.imshow(t2l, origin=\"lower\", zmin=0, zmax=150)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import plotly.graph_objects as go\n",
-    "import numpy as np\n",
-    "import ipywidgets as iw\n",
-    "fw = go.FigureWidget()\n",
-    "\n",
-    "fw.add_trace(go.Bar(x=[1, 2, 3], y=[1, 3, 2]))\n",
-    "\n",
-    "N=10\n",
-    "test_data = np.random.randint(2, 8, (3, N))\n",
-    "slider = iw.IntSlider(value=1, min=1, max=N, step=1, description='Step')\n",
-    "slider.layout = dict(margin='12px 80px 40px 5px', width='700px')\n",
-    "def step_changed(change):\n",
-    "    fw.data[0].y = test_data[:, slider.value-1]\n",
-    "    \n",
-    "slider.observe(step_changed, 'value')  \n",
-    "play_button = iw.Play(value=1, min=1, max=N,  interval=225)\n",
-    "play_button.layout = dict(margin='12px 10px 50px 100px')\n",
-    "iw.link((play_button, 'value'), (slider, 'value'))\n",
-    "iw.VBox([fw, iw.HBox([play_button, slider])])#from slider to plot"
+    "# dashboard.show()\n"
    ]
   },
   {
@@ -361,46 +303,6 @@
     "img = io.imread('https://upload.wikimedia.org/wikipedia/commons/thumb/0/00/Crab_Nebula.jpg/240px-Crab_Nebula.jpg')\n",
     "fig = px.imshow(img)\n",
     "fig.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# library imports\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import holoviews as hv\n",
-    "hv.extension('bokeh', logo=False)\n",
-    "import panel as pn\n",
-    "import time\n",
-    "\n",
-    "# create sample data\n",
-    "data = np.random.normal(size=[50, 2])\n",
-    "df = pd.DataFrame(data, columns=['col1', 'col2'])\n",
-    "\n",
-    "# create holoviews graph\n",
-    "hv_plot = hv.Image(im[:,:,0], bounds=(0, 0, 1, 1))\n",
-    "# hv_plot.data = im[:,:,1]\n",
-    "\n",
-    "# display graph in browser\n",
-    "# a bokeh server is automatically started\n",
-    "bokeh_server = pn.Row(hv_plot).show(port=12345)\n",
-    "\n",
-    "await asyncio.sleep(1)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "# stop the bokeh server (when needed)\n",
-    "bokeh_server.stop()"
    ]
   },
   {
