starts to learn

--- a/replay.ipynb
+++ b/replay.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,13 +202,6 @@
     "            fig_widget.data[3].x = levels\n",
     "            fig_widget.data[3].y = ask_prices\n",
     "\n",
-    "            # Update axes labels and ranges if necessary\n",
-    "            fig_widget.update_xaxes(title_text=\"Level\", row=3, col=1)\n",
-    "            fig_widget.update_yaxes(title_text=\"Price\", row=3, col=1)\n",
-    "\n",
-    "        # Optional: add a small delay to control update rate\n",
-    "        # await asyncio.sleep(0.05)\n",
-    "\n",
     "# Run the asynchronous function\n",
     "await update_figure()"
    ]
@@ -373,6 +366,144 @@
     "\n",
     "# Display with Panel\n",
     "pn.panel(dmap).show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from deep_orderbook.test_learn import train_and_predict\n",
+    "\n",
+    "async for books_array, time_levels, pxar, prediction, loss in train_and_predict(max_samples=10, epoch=1):\n",
+    "    print(loss)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import plotly.graph_objects as go\n",
+    "from plotly.subplots import make_subplots\n",
+    "import asyncio\n",
+    "from IPython.display import display\n",
+    "\n",
+    "# Define your asynchronous function to update the figure\n",
+    "async def update_figure(max_samples=100, epoch=1):\n",
+    "    # Initialize the figure with three subplots and adjust row heights\n",
+    "    fig = make_subplots(\n",
+    "        rows=5, cols=1,\n",
+    "        subplot_titles=(\"Books\", \"Level Proximity\", \"Bid and Ask Price Levels\"),\n",
+    "        vertical_spacing=0.05,\n",
+    "        row_heights=[0.2, 0.2, 0.2, 0.2, 0.2]  # Adjust the relative heights of the rows\n",
+    "    )\n",
+    "\n",
+    "    # Increase the overall figure height\n",
+    "    fig.update_layout(\n",
+    "        height=600,  # Adjusted for three subplots\n",
+    "        width=1200,\n",
+    "        margin=dict(t=50, b=50, l=50, r=50),\n",
+    "        showlegend=True\n",
+    "    )\n",
+    "\n",
+    "    # Create the figure widget\n",
+    "    fig_widget = go.FigureWidget(fig)\n",
+    "    display(fig_widget)\n",
+    "\n",
+    "    # Initialize empty traces for heatmaps\n",
+    "    im_trace = go.Heatmap(\n",
+    "        z=np.zeros((10, 10)),\n",
+    "        colorscale='RdBu',\n",
+    "        zmin=-1, zmax=1,\n",
+    "        showscale=False\n",
+    "    )\n",
+    "    t2l_trace = go.Heatmap(\n",
+    "        z=np.zeros((10, 10)),\n",
+    "        colorscale='Turbo',\n",
+    "        zmin=0, zmax=1,\n",
+    "        showscale=False\n",
+    "    )\n",
+    "\n",
+    "    # Initialize line traces for bid and ask price levels\n",
+    "    bid_trace = go.Scatter(\n",
+    "        x=[], y=[],\n",
+    "        mode='lines',\n",
+    "        line=dict(color='green'),\n",
+    "        showlegend=False\n",
+    "    )\n",
+    "    ask_trace = go.Scatter(\n",
+    "        x=[], y=[],\n",
+    "        mode='lines',\n",
+    "        line=dict(color='red'),\n",
+    "        showlegend=False\n",
+    "    )\n",
+    "\n",
+    "    pred_trace = go.Heatmap(\n",
+    "        z=np.zeros((10, 10)),\n",
+    "        colorscale='Turbo',\n",
+    "        zmin=0, zmax=1,\n",
+    "        showscale=False\n",
+    "    )\n",
+    "\n",
+    "    # Initialize line traces for bid and ask price levels\n",
+    "    loss_trace = go.Scatter(\n",
+    "        x=[], y=[],\n",
+    "        mode='lines',\n",
+    "        line=dict(color='green'),\n",
+    "        showlegend=False\n",
+    "    )\n",
+    "\n",
+    "    # Add traces to the figure widget\n",
+    "    fig_widget.add_trace(im_trace, row=1, col=1)\n",
+    "    fig_widget.add_trace(t2l_trace, row=2, col=1)\n",
+    "    fig_widget.add_trace(bid_trace, row=3, col=1)\n",
+    "    fig_widget.add_trace(ask_trace, row=3, col=1)\n",
+    "    fig_widget.add_trace(pred_trace, row=4, col=1)\n",
+    "    fig_widget.add_trace(loss_trace, row=5, col=1)\n",
+    "\n",
+    "    # Asynchronous loop to update the figure\n",
+    "    losses = []\n",
+    "    async for shaped, t2l, pxar, prediction, loss in train_and_predict(max_samples=max_samples, epoch=epoch):\n",
+    "        # Process your data for heatmaps\n",
+    "        im_data = shaped.copy().transpose(1, 0, 2)\n",
+    "        im_data[:, :, 0] *= -0.5\n",
+    "        im_data[:, :, 1:3] *= 1e6\n",
+    "        im_data = np.clip(im_data, -1, 1)\n",
+    "        t2l_data = np.clip(t2l[:, :, 0].T, -1, 1)\n",
+    "\n",
+    "        # Extract bid and ask prices from pxar\n",
+    "        bid_prices = pxar[:, 0]\n",
+    "        ask_prices = pxar[:, 1]\n",
+    "        times = np.arange(len(bid_prices))  # Assuming levels from 0 to 511\n",
+    "\n",
+    "        pred_shape = prediction.reshape(t2l.shape).transpose(1, 0, 2)\n",
+    "        pred_shape = np.clip(pred_shape[:, :, 0], -1, 1)\n",
+    "        losses.append(loss)\n",
+    "        losses =losses[-1000:]\n",
+    "\n",
+    "        # Update the figure widget traces\n",
+    "        with fig_widget.batch_update():\n",
+    "            # Update heatmaps\n",
+    "            fig_widget.data[0].z = im_data.mean(axis=2)\n",
+    "            fig_widget.data[1].z = t2l_data\n",
+    "\n",
+    "            # Update bid and ask price traces\n",
+    "            fig_widget.data[2].x = times\n",
+    "            fig_widget.data[2].y = bid_prices\n",
+    "            fig_widget.data[3].x = times\n",
+    "            fig_widget.data[3].y = ask_prices\n",
+    "\n",
+    "            # Update prediction heatmap\n",
+    "            fig_widget.data[4].z = pred_shape\n",
+    "            fig_widget.data[5].x = np.arange(len(losses))\n",
+    "            fig_widget.data[5].y = losses\n",
+    "\n",
+    "# Run the asynchronous function\n",
+    "await update_figure(max_samples=100000, epoch=10)"
    ]
   },
   {
