--- a/replay.ipynb
+++ b/replay.ipynb
@@ -51,7 +51,7 @@
    "outputs": [],
    "source": [
     "async def iter_shapes(date_regexp='2024-08-06', max_samples=0):\n",
-    "    symbol_shapers = {pair: ArrayShaper(zoom_frac=0.002) for pair in MARKETS}\n",
+    "    symbol_shapers = {pair: ArrayShaper(zoom_frac=0.004) for pair in MARKETS}\n",
     "    async for onesec in iter_sec(max_samples=max_samples):\n",
     "        yield {\n",
     "            market: await symbol_shapers[market].make_arr3d(\n",
@@ -74,7 +74,7 @@
     "import matplotlib.pyplot as plt\n",
     "from IPython.display import clear_output\n",
     "\n",
-    "async def iter_gen_arrays(date_regexp='2024-08-06', max_samples=0):\n",
+    "async def iter_gen_arrays(date_regexp='2024-08-05', max_samples=0):\n",
     "    async for shapes in iter_shapes(max_samples=max_samples):\n",
     "        yield shapes['ETH-USD'].transpose(1, 0, 2)\n",
     "        # yield np.hstack([shapes[market] for market in MARKETS]).transpose(1, 0, 2)\n",
@@ -96,7 +96,7 @@
    "outputs": [],
    "source": [
     "async def iter_shapes_t2l(date_regexp='2024', max_samples=0):\n",
-    "    symbol_shaper = ArrayShaper(zoom_frac=0.002)\n",
+    "    symbol_shaper = ArrayShaper(zoom_frac=0.004)\n",
     "    async for onesec in iter_sec(max_samples=max_samples):\n",
     "        yield [\n",
     "            await symbol_shaper.make_arr3d(onesec.symbols['ETH-USD']),\n",
@@ -386,6 +386,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from deep_orderbook.test_learn import train_and_predict\n",
     "import numpy as np\n",
     "import plotly.graph_objects as go\n",
     "from plotly.subplots import make_subplots\n",
@@ -483,7 +484,7 @@
     "        pred_shape = prediction.reshape(t2l.shape).transpose(1, 0, 2)\n",
     "        pred_shape = np.clip(pred_shape[:, :, 0], -1, 1)\n",
     "        losses.append(loss)\n",
-    "        losses =losses[-1000:]\n",
+    "        losses =losses[-512:]\n",
     "\n",
     "        # Update the figure widget traces\n",
     "        with fig_widget.batch_update():\n",
