Config and visu.py

--- a/replay.ipynb
+++ b/replay.ipynb
@@ -2,21 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
+    "import asyncio\n",
     "from deep_orderbook.shaper import ArrayShaper\n",
-    "from tqdm.auto import tqdm"
+    "from deep_orderbook.config import ReplayConfig"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "MARKETS = [\"ETH-BTC\", \"BTC-USD\", \"ETH-USD\"]"
+    "replay_conf_3 = ReplayConfig(\n",
+    "    markets=[\"ETH-BTC\", \"BTC-USD\", \"ETH-USD\"],\n",
+    "    data_dir='data',\n",
+    "    date_regexp='2024-08-04',\n",
+    "    max_samples=-1,\n",
+    ")"
    ]
   },
   {
@@ -28,19 +35,17 @@
     "from deep_orderbook.feeds.coinbase_feed import CoinbaseFeed\n",
     "from deep_orderbook.replayer import ParquetReplayer\n",
     "\n",
-    "async def iter_sec(date_regexp='2024-08-06', max_samples=0):\n",
-    "    replayer = ParquetReplayer('data', date_regexp=date_regexp)\n",
+    "\n",
+    "async def iter_sec(config: ReplayConfig):\n",
     "    async with CoinbaseFeed(\n",
-    "        markets=MARKETS,\n",
-    "        replayer=replayer,\n",
+    "        config=config,\n",
+    "        replayer=ParquetReplayer(config=config),\n",
     "    ) as feed:\n",
     "        async for onesec in feed.one_second_iterator():\n",
     "            yield onesec\n",
-    "            max_samples -= 1\n",
-    "            if max_samples == 0:\n",
-    "                break\n",
     "\n",
-    "async for onesec in iter_sec(max_samples=3):\n",
+    "\n",
+    "async for onesec in iter_sec(config=replay_conf_3.but(max_samples=3)):\n",
     "    print(onesec)"
    ]
   },
@@ -50,18 +55,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "async def iter_shapes(date_regexp='2024-08-06', max_samples=0):\n",
-    "    symbol_shapers = {pair: ArrayShaper(zoom_frac=0.004) for pair in MARKETS}\n",
-    "    async for onesec in iter_sec(max_samples=max_samples):\n",
+    "async def iter_shapes(config: ReplayConfig):\n",
+    "    symbol_shapers = {pair: ArrayShaper(zoom_frac=0.004) for pair in config.markets}\n",
+    "    async for onesec in iter_sec(config=config):\n",
     "        yield {\n",
-    "            market: await symbol_shapers[market].make_arr3d(\n",
-    "                onesec.symbols[market]\n",
-    "            )\n",
-    "            for market in MARKETS\n",
+    "            market: await symbol_shapers[market].make_arr3d(onesec.symbols[market])\n",
+    "            for market in config.markets\n",
     "        }\n",
     "\n",
-    "async for shaped in iter_shapes(max_samples=1):\n",
-    "    print(shaped)\n"
+    "\n",
+    "async for shaped in iter_shapes(config=replay_conf_3.but(max_samples=1, skip_until_time=\"23:30\")):\n",
+    "    for k, v in shaped.items():\n",
+    "        print(f\"{k}: {v.shape}, values from {v.min()} to {v.max()}\")"
    ]
   },
   {
@@ -74,13 +79,12 @@
     "import matplotlib.pyplot as plt\n",
     "from IPython.display import clear_output\n",
     "\n",
-    "async def iter_gen_arrays(date_regexp='2024-08-05', max_samples=0):\n",
-    "    async for shapes in iter_shapes(max_samples=max_samples):\n",
+    "async def iter_gen_arrays(config: ReplayConfig):\n",
+    "    async for shapes in iter_shapes(config=config.but(markets=[\"ETH-USD\"])):\n",
     "        yield shapes['ETH-USD'].transpose(1, 0, 2)\n",
-    "        # yield np.hstack([shapes[market] for market in MARKETS]).transpose(1, 0, 2)\n",
     "\n",
     "\n",
-    "async for arr in iter_gen_arrays(max_samples=100):\n",
+    "async for arr in iter_gen_arrays(config=replay_conf_3.but(max_samples=100, skip_until_time=\"23:15\")):\n",
     "    im = arr.copy()\n",
     "    im[:,:,0] *= -0.2\n",
     "    im[:,:,1:3] *= 1e6\n",
@@ -95,16 +99,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "async def iter_shapes_t2l(date_regexp='2024', max_samples=0):\n",
+    "async def iter_shapes_t2l(config: ReplayConfig):\n",
     "    symbol_shaper = ArrayShaper(zoom_frac=0.004)\n",
-    "    async for onesec in iter_sec(max_samples=max_samples):\n",
+    "    async for onesec in iter_sec(config=config):\n",
     "        yield [\n",
     "            await symbol_shaper.make_arr3d(onesec.symbols['ETH-USD']),\n",
     "            await symbol_shaper.build_time_level_trade(),\n",
     "            symbol_shaper.prices_array\n",
     "        ]\n",
     "\n",
-    "async for shapes in iter_shapes_t2l(max_samples=1):\n",
+    "async for shapes in iter_shapes_t2l(config=replay_conf_3.but(max_samples=1, skip_until_time=\"23:15\")):\n",
     "    print(shapes[0].shape, shapes[1].shape, shapes[2].shape)"
    ]
   },
@@ -114,96 +118,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import plotly.graph_objects as go\n",
-    "from plotly.subplots import make_subplots\n",
-    "import asyncio\n",
-    "from IPython.display import display\n",
+    "from deep_orderbook.visu import Visualizer\n",
+    "\n",
+    "vis = Visualizer()\n",
+    "\n",
     "\n",
     "# Define your asynchronous function to update the figure\n",
-    "async def update_figure():\n",
-    "    # Initialize the figure with three subplots and adjust row heights\n",
-    "    fig = make_subplots(\n",
-    "        rows=3, cols=1,\n",
-    "        subplot_titles=(\"Books\", \"Level Proximity\", \"Bid and Ask Price Levels\"),\n",
-    "        vertical_spacing=0.05,\n",
-    "        row_heights=[0.33, 0.33, 0.34]  # Adjust the relative heights of the rows\n",
-    "    )\n",
-    "\n",
-    "    # Increase the overall figure height\n",
-    "    fig.update_layout(\n",
-    "        height=600,  # Adjusted for three subplots\n",
-    "        width=1200,\n",
-    "        margin=dict(t=50, b=50, l=50, r=50),\n",
-    "        showlegend=True\n",
-    "    )\n",
-    "\n",
-    "    # Create the figure widget\n",
-    "    fig_widget = go.FigureWidget(fig)\n",
-    "    display(fig_widget)\n",
-    "\n",
-    "    # Initialize empty traces for heatmaps\n",
-    "    im_trace = go.Heatmap(\n",
-    "        z=np.zeros((10, 10)),\n",
-    "        colorscale='RdBu',\n",
-    "        zmin=-1, zmax=1,\n",
-    "        showscale=False\n",
-    "    )\n",
-    "    t2l_trace = go.Heatmap(\n",
-    "        z=np.zeros((10, 10)),\n",
-    "        colorscale='Turbo',\n",
-    "        zmin=0, zmax=1,\n",
-    "        showscale=False\n",
-    "    )\n",
-    "\n",
-    "    # Initialize line traces for bid and ask price levels\n",
-    "    bid_trace = go.Scatter(\n",
-    "        x=[], y=[],\n",
-    "        mode='lines',\n",
-    "        line=dict(color='green'),\n",
-    "        showlegend=False\n",
-    "    )\n",
-    "    ask_trace = go.Scatter(\n",
-    "        x=[], y=[],\n",
-    "        mode='lines',\n",
-    "        line=dict(color='red'),\n",
-    "        showlegend=False\n",
-    "    )\n",
-    "\n",
-    "    # Add traces to the figure widget\n",
-    "    fig_widget.add_trace(im_trace, row=1, col=1)\n",
-    "    fig_widget.add_trace(t2l_trace, row=2, col=1)\n",
-    "    fig_widget.add_trace(bid_trace, row=3, col=1)\n",
-    "    fig_widget.add_trace(ask_trace, row=3, col=1)\n",
-    "\n",
-    "    # Asynchronous loop to update the figure\n",
-    "    async for shaped, t2l, pxar in iter_shapes_t2l(max_samples=100):\n",
-    "        # Process your data for heatmaps\n",
+    "async def update_figure(config: ReplayConfig):\n",
+    "    async for shaped, t2l, pxar in iter_shapes_t2l(config=config):\n",
     "        im_data = shaped.copy().transpose(1, 0, 2)\n",
     "        im_data[:, :, 0] *= -0.5\n",
     "        im_data[:, :, 1:3] *= 1e6\n",
     "        im_data = np.clip(im_data, -1, 1)\n",
+    "        im_data = im_data.mean(axis=2)\n",
     "        t2l_data = np.clip(t2l[:, :, 0].T, -1, 1)\n",
     "\n",
-    "        # Extract bid and ask prices from pxar\n",
-    "        bid_prices = pxar[:, 0]\n",
-    "        ask_prices = pxar[:, 1]\n",
-    "        levels = np.arange(len(bid_prices))  # Assuming levels from 0 to 511\n",
+    "        vis.update(books_z_data=im_data, level_reach_z_data=t2l_data, bidask=pxar)\n",
     "\n",
-    "        # Update the figure widget traces\n",
-    "        with fig_widget.batch_update():\n",
-    "            # Update heatmaps\n",
-    "            fig_widget.data[0].z = im_data.mean(axis=2)\n",
-    "            fig_widget.data[1].z = t2l_data\n",
-    "\n",
-    "            # Update bid and ask price traces\n",
-    "            fig_widget.data[2].x = levels\n",
-    "            fig_widget.data[2].y = bid_prices\n",
-    "            fig_widget.data[3].x = levels\n",
-    "            fig_widget.data[3].y = ask_prices\n",
     "\n",
     "# Run the asynchronous function\n",
-    "await update_figure()"
+    "await update_figure(config=replay_conf_3.but(max_samples=100, skip_until_time=\"23:30\"))"
    ]
   },
   {
@@ -374,11 +308,148 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import plotly.graph_objects as go\n",
+    "from plotly.subplots import make_subplots\n",
+    "from IPython.display import display\n",
+    "\n",
+    "from learn.test_learn import train_and_predict\n",
+    "\n",
+    "async for books_array, time_levels, pxar, prediction, loss in train_and_predict(max_samples=10, epoch=1):\n",
+    "    print(loss)\n",
+    "\n",
+    "# Define your asynchronous function to update the figure\n",
+    "async def update_figure(max_samples=100, epoch=1):\n",
+    "    # Initialize the figure with three subplots and adjust row heights\n",
+    "    fig = make_subplots(\n",
+    "        rows=5, cols=1,\n",
+    "        subplot_titles=(\"Books\", \"Level Proximity\", \"Bid and Ask Price Levels\"),\n",
+    "        vertical_spacing=0.05,\n",
+    "        row_heights=[0.2, 0.2, 0.2, 0.2, 0.2]  # Adjust the relative heights of the rows\n",
+    "    )\n",
+    "\n",
+    "    # Increase the overall figure height\n",
+    "    fig.update_layout(\n",
+    "        height=600,  # Adjusted for three subplots\n",
+    "        width=1200,\n",
+    "        margin=dict(t=50, b=50, l=50, r=50),\n",
+    "        showlegend=True\n",
+    "    )\n",
+    "\n",
+    "    # Create the figure widget\n",
+    "    fig_widget = go.FigureWidget(fig)\n",
+    "    display(fig_widget)\n",
+    "\n",
+    "    # Initialize empty traces for heatmaps\n",
+    "    im_trace = go.Heatmap(\n",
+    "        z=np.zeros((10, 10)),\n",
+    "        colorscale='RdBu',\n",
+    "        zmin=-1, zmax=1,\n",
+    "        showscale=False\n",
+    "    )\n",
+    "    t2l_trace = go.Heatmap(\n",
+    "        z=np.zeros((10, 10)),\n",
+    "        colorscale='Turbo',\n",
+    "        zmin=0, zmax=1,\n",
+    "        showscale=False\n",
+    "    )\n",
+    "\n",
+    "    # Initialize line traces for bid and ask price levels\n",
+    "    bid_trace = go.Scatter(\n",
+    "        x=[], y=[],\n",
+    "        mode='lines',\n",
+    "        line=dict(color='green'),\n",
+    "        showlegend=False\n",
+    "    )\n",
+    "    ask_trace = go.Scatter(\n",
+    "        x=[], y=[],\n",
+    "        mode='lines',\n",
+    "        line=dict(color='red'),\n",
+    "        showlegend=False\n",
+    "    )\n",
+    "\n",
+    "    pred_trace = go.Heatmap(\n",
+    "        z=np.zeros((10, 10)),\n",
+    "        colorscale='Turbo',\n",
+    "        zmin=0, zmax=1,\n",
+    "        showscale=False\n",
+    "    )\n",
+    "\n",
+    "    # Initialize line traces for bid and ask price levels\n",
+    "    loss_trace = go.Scatter(\n",
+    "        x=[], y=[],\n",
+    "        mode='lines',\n",
+    "        line=dict(color='green'),\n",
+    "        showlegend=False\n",
+    "    )\n",
+    "\n",
+    "    # Add traces to the figure widget\n",
+    "    fig_widget.add_trace(im_trace, row=1, col=1)\n",
+    "    fig_widget.add_trace(t2l_trace, row=2, col=1)\n",
+    "    fig_widget.add_trace(bid_trace, row=3, col=1)\n",
+    "    fig_widget.add_trace(ask_trace, row=3, col=1)\n",
+    "    fig_widget.add_trace(pred_trace, row=4, col=1)\n",
+    "    fig_widget.add_trace(loss_trace, row=5, col=1)\n",
+    "\n",
+    "    # Asynchronous loop to update the figure\n",
+    "    losses = []\n",
+    "    async for shaped, t2l, pxar, prediction, loss in train_and_predict(max_samples=max_samples, epoch=epoch):\n",
+    "        # Process your data for heatmaps\n",
+    "        im_data = shaped.copy().transpose(1, 0, 2)\n",
+    "        im_data[:, :, 0] *= -0.5\n",
+    "        im_data[:, :, 1:3] *= 1e6\n",
+    "        im_data = np.clip(im_data, -1, 1)\n",
+    "        t2l_data = np.clip(t2l[:, :, 0].T, -1, 1)\n",
+    "\n",
+    "        # Extract bid and ask prices from pxar\n",
+    "        bid_prices = pxar[:, 0]\n",
+    "        ask_prices = pxar[:, 1]\n",
+    "        times = np.arange(len(bid_prices))  # Assuming levels from 0 to 511\n",
+    "\n",
+    "        pred_shape = prediction.reshape(t2l.shape).transpose(1, 0, 2)\n",
+    "        pred_shape = np.clip(pred_shape[:, :, 0], -1, 1)\n",
+    "        losses.append(loss)\n",
+    "        losses =losses[-512:]\n",
+    "\n",
+    "        # Update the figure widget traces\n",
+    "        with fig_widget.batch_update():\n",
+    "            # Update heatmaps\n",
+    "            fig_widget.data[0].z = im_data.mean(axis=2)\n",
+    "            fig_widget.data[1].z = t2l_data\n",
+    "\n",
+    "            # Update bid and ask price traces\n",
+    "            fig_widget.data[2].x = times\n",
+    "            fig_widget.data[2].y = bid_prices\n",
+    "            fig_widget.data[3].x = times\n",
+    "            fig_widget.data[3].y = ask_prices\n",
+    "\n",
+    "            # Update prediction heatmap\n",
+    "            fig_widget.data[4].z = pred_shape\n",
+    "            fig_widget.data[5].x = np.arange(len(losses))\n",
+    "            fig_widget.data[5].y = losses\n",
+    "\n",
+    "# Run the asynchronous function\n",
+    "await update_figure(max_samples=100000, epoch=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "py311",
    "language": "python",
    "name": "python3"
   },
