better config use

--- a/replay.ipynb
+++ b/replay.ipynb
@@ -9,7 +9,7 @@
     "import numpy as np\n",
     "import asyncio\n",
     "from deep_orderbook.shaper import ArrayShaper\n",
-    "from deep_orderbook.config import ReplayConfig"
+    "from deep_orderbook.config import ReplayConfig, ShaperConfig"
    ]
   },
   {
@@ -55,8 +55,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "shaper_config = ShaperConfig()\n",
+    "\n",
     "async def iter_shapes(config: ReplayConfig):\n",
-    "    symbol_shapers = {pair: ArrayShaper(zoom_frac=0.004) for pair in config.markets}\n",
+    "    symbol_shapers = {pair: ArrayShaper(config=shaper_config) for pair in config.markets}\n",
     "    async for onesec in iter_sec(config=config):\n",
     "        yield {\n",
     "            market: await symbol_shapers[market].make_arr3d(onesec.symbols[market])\n",
@@ -64,7 +66,7 @@
     "        }\n",
     "\n",
     "\n",
-    "async for shaped in iter_shapes(config=replay_conf_3.but(max_samples=1, skip_until_time=\"23:30\")):\n",
+    "async for shaped in iter_shapes(config=replay_conf_3.but(max_samples=1, skip_until_time=\"23:15\")):\n",
     "    for k, v in shaped.items():\n",
     "        print(f\"{k}: {v.shape}, values from {v.min()} to {v.max()}\")"
    ]
@@ -99,16 +101,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "async def iter_shapes_t2l(config: ReplayConfig):\n",
-    "    symbol_shaper = ArrayShaper(zoom_frac=0.004)\n",
-    "    async for onesec in iter_sec(config=config):\n",
+    "async def iter_shapes_t2l(replay_config: ReplayConfig, shaper_config: ShaperConfig):\n",
+    "    symbol_shaper = ArrayShaper(config=shaper_config)\n",
+    "    async for onesec in iter_sec(config=replay_config):\n",
     "        yield [\n",
     "            await symbol_shaper.make_arr3d(onesec.symbols['ETH-USD']),\n",
     "            await symbol_shaper.build_time_level_trade(),\n",
-    "            symbol_shaper.prices_array\n",
+    "            symbol_shaper.prices_array,\n",
     "        ]\n",
     "\n",
-    "async for shapes in iter_shapes_t2l(config=replay_conf_3.but(max_samples=1, skip_until_time=\"23:15\")):\n",
+    "\n",
+    "async for shapes in iter_shapes_t2l(\n",
+    "    replay_config=replay_conf_3.but(max_samples=1, skip_until_time=\"23:15\"),\n",
+    "    shaper_config=shaper_config,\n",
+    "):\n",
     "    print(shapes[0].shape, shapes[1].shape, shapes[2].shape)"
    ]
   },
@@ -124,8 +130,8 @@
     "\n",
     "\n",
     "# Define your asynchronous function to update the figure\n",
-    "async def update_figure(config: ReplayConfig):\n",
-    "    async for shaped, t2l, pxar in iter_shapes_t2l(config=config):\n",
+    "async def rolling_plot(config: ReplayConfig):\n",
+    "    async for shaped, t2l, pxar in iter_shapes_t2l(replay_config=config):\n",
     "        im_data = shaped.copy().transpose(1, 0, 2)\n",
     "        im_data[:, :, 0] *= -0.5\n",
     "        im_data[:, :, 1:3] *= 1e6\n",
@@ -137,7 +143,7 @@
     "\n",
     "\n",
     "# Run the asynchronous function\n",
-    "await update_figure(config=replay_conf_3.but(max_samples=100, skip_until_time=\"23:30\"))"
+    "await rolling_plot(config=replay_conf_3.but(max_samples=100, skip_until_time=\"23:15\"))"
    ]
   },
   {
@@ -193,20 +199,15 @@
     "\n",
     "# Define the async update function\n",
     "async def run_updates():\n",
-    "    async for shaped, t2l, pxar in iter_shapes_t2l(max_samples=100):\n",
-    "        # if np.isnan(pxar).any().any():\n",
-    "        #     pxar[np.isnan(pxar)] = np.nanmean(pxar)\n",
-    "        # Process the 'Books' heatmap data\n",
+    "    async for shaped, t2l, pxar in iter_shapes_t2l(replay_config=replay_conf_3.but(max_samples=100, skip_until_time=\"23:15\")):\n",
     "        im_data = shaped.copy().transpose(1, 0, 2)\n",
     "        im_data[:, :, 0] *= -0.5\n",
     "        im_data[:, :, 1:3] *= 1e6\n",
     "        im_data = np.clip(im_data, -1, 1)\n",
     "        im_mean = im_data.mean(axis=2)\n",
     "\n",
-    "        # Process the 'Level Proximity' heatmap data\n",
     "        t2l_data = np.clip(t2l[:, :, 0].T, -1, 1)\n",
     "\n",
-    "        # Send data through the streams\n",
     "        im_pipe.send(im_mean)\n",
     "        t2l_pipe.send(t2l_data)\n",
     "        bidask_pipe.send(pxar)\n",
@@ -326,7 +327,7 @@
     "    print(loss)\n",
     "\n",
     "# Define your asynchronous function to update the figure\n",
-    "async def update_figure(max_samples=100, epoch=1):\n",
+    "async def rolling_plot(max_samples=100, epoch=1):\n",
     "    # Initialize the figure with three subplots and adjust row heights\n",
     "    fig = make_subplots(\n",
     "        rows=5, cols=1,\n",
@@ -436,7 +437,7 @@
     "            fig_widget.data[5].y = losses\n",
     "\n",
     "# Run the asynchronous function\n",
-    "await update_figure(max_samples=100000, epoch=10)"
+    "await rolling_plot(max_samples=100000, epoch=10)"
    ]
   },
   {
